--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "react-bootstrap": "^0.32.4",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.1.8",
     "remixicon": "^3.1.1",
+    "routes": "^2.1.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
