--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "remixicon": "^3.1.1",
     "routes": "^2.1.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
